# python_toolkit

./: .gitignore  README.md  pyproject.toml  python_data_style_guide.md
examples/: 01_clean_sensor_records.py  02_geodataframe_workflow.py  03_modeling_prep_workflow.py  04_general_exploration.py
notebooks/: 01_inspect_a_messy_dataset.ipynb  02_clean_with_drop_reasons.ipynb  03_geodataframe_qa.ipynb  04_modeling_prep_and_split.ipynb  _build_notebooks.py
src/geo_daily_tools/: __init__.py  cleaning.py  geo_validation.py  inspection.py  io_utils.py  modeling.py  sample_data.py  validation.py
tests/: test_cleaning.py  test_geo_validation.py  test_inspection.py  test_modeling.py  test_validation.py
